# Notifications-P

./: .env.example  pyproject.toml
app/: main.py
app/core/: __init__.py  celery_config.py  lifespan.py  redis_config.py  taskiq_broker.py  taskiq_worker.py
app/core/configs/: celery.py  celery_conf.py  rabbit_conf.py  redis_conf.py  run_celery_worker.py  taskiq.py  taskiq_conf.py
app/google_mailing/: __init__.py  dependencies.py  send_email.py  send_email_rout.py  send_emails_async.py  send_emails_sync.py
nginx/: nginx.conf
nginx/inclusions/: gzip.conf  security.conf  upstreams.conf
nginx/inclusions/servers/: api_server.conf  rate_limiting.conf
