# deactivate
# .venv\Scripts\activate

[project]
name = "notifications-p"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosmtplib>=5.0.0",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.127.0",
    "orjson>=3.11.5",
    "taskiq>=0.12.1",
    "taskiq-aio-pika>=0.5.0",
    "uvicorn[standard]>=0.40.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.14.10",
]
